# ldapsearch-ad

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  USAGE.md  ldapsearch-ad.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
ldapsearchad/: __init__.py  colors.py  example.py  exceptions.py  ldapsearchad.py  logging.py  utils.py
